--- a/index1.html
+++ b/index1.html
@@ -45,10 +45,11 @@
             <td rowspan="2">st. joseph</td>
         </tr>
         <tr>
-            <!-- <td>shivika</td> -->
-            <!-- <td>goyal</td> -->
+            <!-- <td>S</td> -->
+            <!-- <td>Irfan</td> -->
             <td>C</td>
             <!-- <td>st. joseph</td> -->
+        
         </tr>
     </table>
     
